--- a/style.css
+++ b/style.css
@@ -1,90 +1,99 @@
 * {
-  text-decoration: none;
-  margin: 0px;
-  padding: 0px;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Arial, sans-serif;
 }
 
 body {
-  margin: 0px;
-  padding: 0px;
-  font-family: 'open sans',Sans-Serif;
+    background: linear-gradient(135deg, #2a0751, #5e1b8c);
+    color: white;
 }
 
-.wrapper {
-  width: 1100px;
-  margin: auto;
-  position: relative;
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 50px;
 }
 
-.logo a {
-  font-size: 50px;
-  font-weight: 800;
-  float: left;
-  font-family: Courier;
-  color: black;
-}
-
-.menu {
-  float: right;
-}
-
-nav {
-  width: 100%;
-  margin: auto;
-  display: flex;
-  line-height: 80px;
-  position: sticky;
-  position: -webkit-sticky;
-  top: 0;
-  background: #FFFFFFF;
+.logo {
+    font-size: 24px;
+    font-weight: bold;
 }
 
 nav ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
+    list-style: none;
+    display: flex;
+    gap: 20px;
 }
 
 nav ul li {
-  float: left;
+    display: inline;
 }
 
 nav ul li a {
-  color: black;
-  font-weight: bold;
-  text-align: center;
-  padding: 0px 16px 0px 16px;
-  text-decoration: none;
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+    position: relative;
 }
 
-nav ul li a:hover {
-  text-decoration: underline;
+nav ul li a.active::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 2px;
+    background: white;
+    position: absolute;
+    bottom: -5px;
+    left: 0;
 }
 
-section {
-  margin: auto;
-  display: flex;
-  margin-bottom: 50px;
+.hero {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 100px 50px;
 }
 
-.kolom {
-  margin-top: 50px;
-  margin-bottom: 50px;
+.hero-content {
+    max-width: 50%;
 }
 
-.kolom .deskripsi {
-  font-size: 20px;
-  font-weight: bold;
-  font-family: 'Comic Sans-MS';
-  color: black;
+.hero-content h1 {
+    font-size: 48px;
 }
 
-h2 {
-  font-family: "comic Sans-MS";
-  font-weight: 800;
-  font-size: 45px;
-  margin-bottom: ;: 25px;
-  color:black;
-  
+.hero-content p {
+    font-size: 18px;
+    margin: 20px 0;
+}
+
+.buttons {
+    display: flex;
+    gap: 20px;
+}
+
+.btn {
+    text-decoration: none;
+    padding: 12px 24px;
+    border-radius: 25px;
+    font-weight: bold;
+    display: inline-block;
+}
+
+.btn.primary {
+    background: #ff0080;
+    color: white;
+}
+
+.btn.secondary {
+    border: 2px solid white;
+    color: white;
+}
+
+.hero-image img {
+    width: 100%;
+    max-width: 500px;
 }
